# scannmarket-elasticidad

./: README.md  analisis_prueba_scannmarket.ipynb  elasticidad.Rmd  elasticidad.md  pyproject.toml
.Rproj.user/E867CCA0/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/E867CCA0/sources/prop/: INDEX
.Rproj.user/E867CCA0/sources/session-c72387e4/: 3C6CD49F  723A45DC  723A45DC-contents
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/CAF862DA-elasticidad/1/s/: chunks.json
