[project]
name = "scannmarket-ds-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Andrés Jofré Flor",email = "ljofre2146@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "polars (>=1.31.0,<2.0.0)",
    "great-tables (>=0.18.0,<0.19.0)",
    "formulae (>=0.5.4,<0.6.0)",
    "rpy2 (>=3.6.1,<4.0.0)",
    "pymer4 (>=0.9.2,<0.10.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
